fix layout on mobile

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  touch-action: manipulation;
 }
 
 html, body {
